# latent-space-dance-off

./: .env  .gitignore  AGENTS.md  CRITERIA_FEATURE.md  README.md  check_instance.py  main.py  pyproject.toml  real_repro.py  repro.py  reproduce_issue.py  sonar-project.properties
.github/workflows/: ci.yml
.opencode/: sync-issues.md  todo.md  todo.version.json  work-log.md
.opencode/docs/: _metadata.json  github_com_ollama_ollama-python.md  project-design.md
.zeroshot/: settings.json
docs/superpowers/plans/: 2026-05-03-tournament.md
docs/superpowers/specs/: 2026-05-03-tournament-design.md
example_output/2026-04-27T12:17:38.942935/: 2026-04-27T12:17:38.942935-leaderboard.json  benchmark.json  benchmark_report.html
example_output/2026-04-29T22:10:11.861049/: benchmark.json  benchmark_report.html
src/: __init__.py  benchmark.py  config.py  dance_off.py  html_generator.py  llm_client.py  model_manager.py  ranking.py  round_judge.py  svg_generator.py  svg_judge.py  theme_selector.py  tournament.py  utils.py
src/__tests__/: benchmark.isolated.test.py  config.isolated.test.py  utils.isolated.test.py
tests/: conftest.py  test_benchmark.py  test_config.py  test_dance_off.py  test_dance_off_fallback.py  test_html_generator.py  test_judge_validation.py  test_judgment_persistence.py  test_llm_client.py  test_main.py  test_model_manager.py  test_ranking.py  test_round_judge.py  test_svg_generator.py  test_svg_judge.py  test_theme_selector.py  test_tournament.py  test_utils.py  test_xss_vulnerability.py
