[project]
name = "latent-space-dance-off"
version = "0.1.0"
description = "Benchmark LLM models through SVG generation and AI-powered judging"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jon Regeimbal"}
]
dependencies = [
    "cairosvg>=2.7.0",
    "httpx>=0.27.0",
    "img2ascii @ git+https://github.com/gopaljigaur/img2ascii.git",
    "opencv-python-headless>=4.8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/jregeimbal/latent-space-dance-off"
Repository = "https://github.com/jregeimbal/latent-space-dance-off"

[project.scripts]
latent-space-dance-off = "main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "tests"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[project.optional-dependencies]
dev = [
     "pytest",
     "pytest-asyncio",
     "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
